            DT[2,"A"] <- "c"  # adds new level automatically
            DT[2,A:="c"]      # same (faster)
            DT$A = "newlevel" # adds new level and recycles it through A
        Thanks to Damian Betebenner and Chris Neff for highlighting.
        To change the type of a column, provide a full length RHS (i.e.
        'replace' column syntax).
        

BUG FIXES


        *********************************************
        **                                         **
        **   CHANGES IN DATA.TABLE VERSION 1.6.6   **
        **                                         **
        *********************************************

BUG FIXES

    o   Tests using .Call("Rf_setAttrib",...) passed CRAN acceptance
        checks but failed on many (but not all) platforms. Fixed.
        Thanks (and apologies) to Prof Brian Ripley for investigating
        the issue.


        *********************************************
        **                                         **
        **   CHANGES IN DATA.TABLE VERSION 1.6.5   **
        **                                         **
        *********************************************

NEW FEATURES

    o   The LHS of := may now be column names or positions
        when with=FALSE; e.g.,
        
            DT[,c("d","e"):=NULL,with=FALSE]
            DT[,4:5:=NULL,with=FALSE]
            newcolname="myname"
            DT[,newcolname:=3.14,with=FALSE]
        
        This implements FR#1499 'Ability to efficiently remove a
        vector of column names' by Timothee Carayol in addition to
        creating and assigning to multiple columns. We still plan
        to allow multiple := without needing with=FALSE, in future.
        
    o   setkey(DT,...) now returns DT (invisibly) rather than NULL.
        This is to allow compound statements; e.g.,
            setkey(DT,x)["a"]

    o   setkey (and key<-) are now more efficient when the data happens